[tool.poetry]
name = "telegram-pm"
version = "0.1.5.2"
description = "Telegram preview page parser"
authors = ["aIligat0r <aIligat0r@none.none>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/aIligat0r/tpm"
repository = "https://github.com/aIligat0r/tpm"

[tool.poetry.scripts]
telegram-pm = "commands.cli:app"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
bs4 = "^0.0.2"
structlog = "^25.2.0"
typer = "^0.15.2"
retry = "^0.9.2"
python-dotenv = "^1.1.0"
html5lib = "^1.1"
aiosqlite = "^0.21.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.5"
pre-commit = "^4.2.0"
mypy = "^1.15.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Issues" = "https://github.com/aIligat0r/tpm/issues"
